-
Bug
-
Resolution: Done
-
P2: Important
-
5.6.0
-
None
-
GNU/Linux
-
abc79baa7018ea6bed7ce2a1c327562cccf8ceec
All tablets using the evdev driver seem to be recognised as mouse.
The problem is visible in Krita 3.0, where those tablets give only mouse input.
See this thread on the forum:
https://forum.kde.org/viewtopic.php?f=288&t=130677
Or these bug reports:
https://bugs.kde.org/show_bug.cgi?id=359642
https://bugs.kde.org/show_bug.cgi?id=361854
The same tablets, it works right with Krita 2.9.11 using Qt4.
For Gerrit Dashboard: QTBUG-52626 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
185065,3 | xcb: support graphics tablets with the "uc-logic" name | 5.9 | qt/qtbase | Status: MERGED | +2 | 0 |